# gpt-agents

./: main.py  pyproject.toml
chapter_03/: Chapter 3 Notebook.ipynb  daily_tasks_api.py
chapter_2/: Chapter 2 Notebook.ipynb  connecting.ipynb
