[project]
name = "gpt-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogenstudio>=0.4.2.2",
    "crewai[tools]>=0.140.0",
    "fastapi>=0.116.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "openai>=1.91.0",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pyautogen>=0.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
